--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,11 @@ main {
 }
 
 image {
-    display: block;
-    height: auto;
-    margin: 0 auto;
-    width: 60%;
+    border-radius: 50%;
+    height: 33%;
+    margin-block-end: 1.7rem;
+    width: 33%;
+    
 }
 
 div{
